--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ethereum-block-by-date": "^1.3.2",
     "ethers": "^5.1.4",
-    "string-similarity": "^4.0.4"
+    "string-similarity": "^4.0.4",
+    "web3": "^1.3.5"
   }
 }
